# chekhovs-python

./: README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/workflows/: python_ci.yml
src/chekhovs_python/: gun.py
tests/: test_chekhovs_python.py
tests/unit/: test_gun.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/.github/: python_ci.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
