[tool.poetry]
name = "chekhovs-python"
version = "0.0.1"
description = ""
authors = ["matt witt <mattcwitt@gmail.com>"]
#packages = [
#    { include = "chekhovs-python" },
#    { include = "chekhovs-python/**/*.py" },
#]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.20.0"
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"
tox-gh-actions = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
